correct header of index.html

--- a/index.html
+++ b/index.html
@@ -20,16 +20,13 @@
                 <div class="header__logo">
                     <a href="/" class="header__logo-link">
                         <img src="assets/img/Logo.svg" alt="LOUVRE" class="header__logo-picture">
-                        <!-- header__logo-picture-->
+                       
                     </a>
                 </div>
-                <nav class="header__menu">
-                    <!-- header__menu-->
-                    <ul class="top-menu">
-                        <!-- top-menu-->
+                <nav class="header__menu top-menu">
+                    <ul class="top-menu__list">
                         <li class="top-menu__item">
-                            <!-- top-menu__link-->
-                            <a href="#" class="top-menu__link">Visiting</a><!-- top-menu__link-->
+                            <a href="#" class="top-menu__link">Visiting</a>
                         </li>
                         <li class="top-menu__item">
                             <a href="!#" class="top-menu__link">Explore</a>
