--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
      <link rel="stylesheet" href="assets/css/fonts.css">
-    <link rel="stylesheet" href="assets/css/reset_andrikanich.css">
+    <!-- <link rel="stylesheet" href="assets/css/reset_andrikanich.css"> -->
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -20,7 +21,6 @@
                 <div class="header__logo">
                     <a href="/" class="header__logo-link">
                         <img src="assets/img/Logo.svg" alt="LOUVRE" class="header__logo-picture">
-                       
                     </a>
                 </div>
                 <nav class="header__menu top-menu">
@@ -45,17 +45,11 @@
             </div>
         </div>
     </header>
-
-
     <main class="main">
-
         <!-- ************************HEADER STYLES END************** -->
 
         <!--WELCOM STYLES START -->
-
         <section class="welcom-section">
-
-
             <div class="container">
                 <!-- class="section_title" используеться для  заголовков всех секций и блоков -->
                 <div class="welcom-louvre">
@@ -70,7 +64,6 @@
                 </div>
             </div>
         </section>
-
         <!-- ********************WELCOM STYLES END *********************** -->
 
         <!-- VISITING STYLES START  -->
@@ -78,7 +71,6 @@
             <div class="container section__container">
                 <h2 class="section__title  visiting-section__title">virtual tour</h2>
                  <!-- virtual-tour__title  -->
-
                 <div class="virtual-tour">
                     <div class="virtual-tour__list">
                         <div class="virtual-tour__item">
@@ -141,12 +133,8 @@
                                 </div>
                             </a>
                         </div>
-
-
                     </div>
                 </div>
-
-
             </div>
         </section>
 
@@ -155,8 +143,6 @@
 
         <section class="explore-section">
             <div class="container">
-
-
                 <div class="picture-explore">
                     <nav class="picture-explore__list">
                         <div class="picture-exlore__item">
@@ -178,7 +164,6 @@
                 </div>
             </div>
         </section>
-
         <!-- ********************** EXPLORE  STYLES END *********************** -->
 
         <!--  VIDEO  STYLES START  -->
@@ -198,7 +183,6 @@
 
 
         <!--  TICKETS  STYLES START *********************************************************** -->
-
         <section class="tickets-section">
             <div class="container">
                 <h2 class="section__title  tickets-section__title">Buy tickets</h2>
@@ -254,9 +238,7 @@
                                   <button class="by-now">Buy Now</button>
                               </form>
                     </div>
-
                 </div>
-
             </div>
         </section>
        <!--  *************TICKETS  STYLES END************  -->
@@ -277,17 +259,10 @@
                             <img src="assets/img/map_contacts.png" alt="">
                         </div>
                     </div>
-
-
-
                 </div>
-
             </div>
-
         </section>
-
     </main>
-
     <footer class="footer">
         <div class="container">
             <div class="footer__wrapper">
@@ -331,12 +306,8 @@
                    <a href=""><img src="assets/img/Twitter.svg" alt="" class="footer__social-link"></a>
                    <a href=""><img src="assets/img/Pinterest.svg" alt="" class="footer__social-link"></a>
                 </div>
-
             </div>
-
         </div>
-
     </footer>
 </body>
-
 </html>
