правки за 31.08-чистовой вариант

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
     <link rel="stylesheet" href="assets/css/fonts.css">
-    <!-- <link rel="stylesheet" href="assets/css/reset_andrikanich.css"> -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -54,8 +53,7 @@
         <div class="section">
         <section class="welcome-section">
             <div class="container">
-                <!-- class="section_title" используеться для  заголовков всех секций и блоков -->
-                <!-- <div class="welcome-louvre"> -->
+                
                     <h1 class="section__title welcome-section__title">welcome<br>to the louvre</h1>
 
                     <div class="welcome-section__description">From the castle to the museum</div>
@@ -63,8 +61,6 @@
                         target="_blank" class="welcome__button ">Discover the Louvre
 
                     </a>
-
-                <!-- </div> -->
             </div>
         </section>
         </div>
@@ -73,10 +69,8 @@
         <!-- VISITING STYLES START  -->
         <div class="section">
             <section class="visiting-section ">
-                <!-- virtual-tour  section -->
                 <div class="container section__container">
                     <h2 class="section__title  visiting-section__title">virtual tour</h2>
-                    <!-- virtual-tour__title  -->
                     <div class="virtual-tour">
                         <div class="virtual-tour__list">
                             <div class="virtual-tour__item">
@@ -86,7 +80,7 @@
                                     <div class="virtual-tour__desctiprion">
                                         <p class="virtual-tour__paragraf-first">360° Virtual Tour</p>
                                         <p class="virtual-tour__paragraf-second">Google Street Panorama View</p>
-                                    </div> <!-- подумать избавиться от классов параграф-->
+                                    </div> 
                                 </a>
                             </div>
                             <div class="virtual-tour__item">
@@ -250,7 +244,6 @@
                                 <div class="by-tickets__description-price">Total &#8364<span>220</span>
                                 </div>
                                 <form action="#" method="POST">
-                                    <!-- <input type="button" class="by-now" value="Buy Now"> -->
                                     <button class="by-now">Buy Now</button>
                                 </form>
                             </div>
@@ -288,16 +281,12 @@
                 <div class="footer__logo">
                     <a href="/" class="footer__logo-link">
                         <img src="assets/img/logo.svg" alt="louvre" class="footer__logo-pic">
-                        <!-- header__logo-picture-->
                     </a>
                 </div>
                 <nav class="footer__nav">
-                    <!-- header__menu-->
                     <ul class="footer__list--left">
-                        <!-- top-menu-->
                         <li class="footer__item">
-                            <!-- top-menu__item-->
-                            <a href="#" class="footer__item-link">Welcome</a><!-- top-menu__link-->
+                            <a href="#" class="footer__item-link">Welcome</a>
                         </li>
                         <li class="footer__item">
                             <a href="!#" class="footer__item-link">Visiting</a>
