правки за 01.09 18:00 хедер и первый экран

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
             <section class="welcome-section section">
                 <div class="container">
-                    <h1 class="section__title welcome-section__title">welcome<br>to the louvre</h1>
+                    <h1 class="section-title welcome-section__title">welcome<br>to the louvre</h1>
                     <div class="welcome-section__description">From the castle to the museum</div>
                     <a href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
-                        target="_blank" class="welcome__button ">Discover the Louvre
+                        target="_blank" class="welcome-section__button ">Discover the Louvre
                     </a>
                 </div>
             </section>
@@ -62,7 +62,7 @@
             <!-- VISITING STYLES START  -->
             <section class="visiting-section section ">
                 <div class="container section__container">
-                    <h2 class="section__title  visiting-section__title">virtual tour</h2>
+                    <h2 class="section-title  visiting-section__title">virtual tour</h2>
                     <div class="virtual-tour">
                         <div class="virtual-tour__list">
                             <div class="virtual-tour__item">
@@ -137,7 +137,7 @@
                     <div class="picture-explore">
                         <nav class="picture-explore__list">
                             <div class="picture-exlore__item">
-                                <h2 class="section__title explore-section__title">Picture explore</h2>
+                                <h2 class="section-title explore-section__title">Picture explore</h2>
                                 <p class="picture-explore__paragraf-first picture-explore__paragrafs">Las Meninas is a
                                     1656
                                     painting by Diego
@@ -181,7 +181,7 @@
             <!--  TICKETS  STYLES START *********************************************************** -->
             <section class="tickets-section section ">
                 <div class="container">
-                    <h2 class="section__title  tickets-section__title">Buy tickets</h2>
+                    <h2 class="section-title  tickets-section__title">Buy tickets</h2>
                     <div class="by-tickets">
                         <div class="by-tickets__list">
                             <div class="by-tickets__picture">
@@ -240,7 +240,7 @@
             <!--  CONTACTS  STYLES START******************************************* -->
             <section class="contacts-section section">
                 <div class="container">
-                    <h2 class="section__title  contacts-section__title">Contacts</h2>
+                    <h2 class="section-title  contacts-section__title">Contacts</h2>
                     <div class="by-contacts">
                         <div class="by-contacts__list">
                             <div class="by-contacts__adress">
