--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +10,8 @@
         <link rel="stylesheet" href="assets/css/reset.css">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
-    <body>
 
+    <body>
         <!-- ************************HEADER STYLES START********************************** -->
         <header class="header">
             <div class="container">
@@ -42,27 +43,22 @@
                 </div>
             </div>
         </header>
+        
         <main class="main">
-
-            <!-- ************************HEADER STYLES END************** -->
-
             <!--WELCOM STYLES START -->
-
-            <section class="welcome-section section">
+            <section class="section welcome-section">
                 <div class="container">
-                    <h1 class="section-title welcome-section__title">welcome<br>to the louvre</h1>
-                    <div class="welcome-section__description">From the castle to the museum</div>
-                    <a href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
-                        target="_blank" class="welcome-section__button ">Discover the Louvre
-                    </a>
+                    <h1 class="section-title">welcome<br>to the louvre</h1>
+                    <p class="welcome-section__description">From the castle to the museum</p>
+                        <a href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
+                            target="_blank" class="welcome-section__button ">Discover the Louvre
+                        </a>
                 </div>
             </section>
-            <!-- ********************WELCOM STYLES END *********************** -->
-
             <!-- VISITING STYLES START  -->
             <section class="visiting-section section ">
-                <div class="container section__container">
-                    <h2 class="section-title  visiting-section__title">virtual tour</h2>
+                <div class="container">
+                    <h2 class="section-title  section-title--gold">virtual tour</h2>
                     <div class="virtual-tour">
                         <div class="virtual-tour__list">
                             <div class="virtual-tour__item">
@@ -130,7 +126,6 @@
                     </div>
                 </div>
             </section>
-            <!--********************* VISITING STYLES END ************************ -->
             <!--  EXPLORE  STYLES START  -->
             <section class="explore-section section">
                 <div class="container">
@@ -159,8 +154,6 @@
                     </div>
                 </div>
             </section>
-            <!-- ********************** EXPLORE  STYLES END *********************** -->
-
             <!--  VIDEO  STYLES START  -->
             <section class="video-section section ">
                 <div class="container">
@@ -175,10 +168,7 @@
                     </div>
                 </div>
             </section>
-            <!-- VIDEO  STYLES END  -->
-
-
-            <!--  TICKETS  STYLES START *********************************************************** -->
+            <!--  TICKETS  STYLES START ****************** -->
             <section class="tickets-section section ">
                 <div class="container">
                     <h2 class="section-title  tickets-section__title">Buy tickets</h2>
@@ -224,7 +214,6 @@
                                     <input type="number" min="0" max="20" value="1" readonly class="number">
                                     <button type="button" class="button_plus"
                                         onclick="this.previousElementSibling.stepUp()">+</button>
-
                                 </div>
                                 <div class="by-tickets__description-price">Total &#8364<span>220</span>
                                 </div>
@@ -235,12 +224,10 @@
                         </div>
                     </div>
             </section>
-            <!--  *************TICKETS  STYLES END************  -->
-
             <!--  CONTACTS  STYLES START******************************************* -->
             <section class="contacts-section section">
                 <div class="container">
-                    <h2 class="section-title  contacts-section__title">Contacts</h2>
+                    <h2 class="section-title  section-title--gold">Contacts</h2>
                     <div class="by-contacts">
                         <div class="by-contacts__list">
                             <div class="by-contacts__adress">
@@ -257,7 +244,7 @@
                 </div>
             </section>
         </main>
-        <footer class="footer">
+        <footer class="footer section">
             <div class="container">
                 <div class="footer__wrapper">
                     <div class="footer__logo">
@@ -300,5 +287,4 @@
             </div>
         </footer>
     </body>
-
 </html>
