--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         
         <main class="main">
             <!--WELCOM STYLES START -->
-            <section class="section welcome-section">
+            <section class="welcome-section">
                 <div class="container">
-                    <h1 class="section-title">welcome<br>to the louvre</h1>
+                    <h1 class="section section-title">welcome<br>to the louvre</h1>
                     <p class="welcome-section__description">From the castle to the museum</p>
                         <a href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
                             target="_blank" class="welcome-section__button ">Discover the Louvre
@@ -56,7 +56,7 @@
                 </div>
             </section>
             <!-- VISITING STYLES START  -->
-            <section class="visiting-section section ">
+            <section class=" visiting-section  ">
                 <div class="container">
                     <h2 class="section-title  section-title--gold">virtual tour</h2>
                     <div class="virtual-tour">
@@ -127,7 +127,7 @@
                 </div>
             </section>
             <!--  EXPLORE  STYLES START  -->
-            <section class="explore-section section">
+            <section class="section explore-section ">
                 <div class="container">
                     <div class="picture-explore">
                         <nav class="picture-explore__list">
@@ -155,7 +155,7 @@
                 </div>
             </section>
             <!--  VIDEO  STYLES START  -->
-            <section class="video-section section ">
+            <section class="section video-section  ">
                 <div class="container">
                     <div class="video-journey">
                         <img src="assets/img/frame.png" alt="" class="video-section__picture">
@@ -169,7 +169,7 @@
                 </div>
             </section>
             <!--  TICKETS  STYLES START ****************** -->
-            <section class="tickets-section section ">
+            <section class="section tickets-section  ">
                 <div class="container">
                     <h2 class="section-title  tickets-section__title">Buy tickets</h2>
                     <div class="by-tickets">
@@ -225,7 +225,7 @@
                     </div>
             </section>
             <!--  CONTACTS  STYLES START******************************************* -->
-            <section class="contacts-section section">
+            <section class="section contacts-section ">
                 <div class="container">
                     <h2 class="section-title  section-title--gold">Contacts</h2>
                     <div class="by-contacts">
