--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!--WELCOM STYLES START -->
         <section class="section welcome-section">
             <div class="container">
-                <h1 class="section-title">welcome<br>to the louvre</h1>
+                <h1 class="section__title">welcome<br>to the louvre</h1>
                 <p class="welcome-section__description">From the castle to the museum</p>
                 <a href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
                     target="_blank" class="welcome-section__button ">Discover the Louvre
@@ -58,16 +58,17 @@
         <!-- VISITING STYLES START  -->
         <section class="section visiting-section">
             <div class="container">
-                <h2 class="section-title  section-title--gold">virtual tour</h2>
+                <h2 class="section__title  section__title--gold">virtual tour</h2>
                 <div class="virtual-tour">
                     <div class="virtual-tour__list">
                         <div class="virtual-tour__item">
                             <a href="" class="virtual-tour__link">
                                 <img class="virtual-tour__image" src="assets/img/rectangle.jpg" alt="">
                                 <div class="virtual-tour__title">royal palace</div>
-                                <div class="virtual-tour__desctiprion virtual-tour__paragrafs">
-                                    <p>360° Virtual Tour</p>
-                                    <p class="virtual-tour__paragraf--second">Google Street Panorama View</p>
+                                <div class="virtual-tour__desctiprion">
+                                    <p class="virtual-tour__paragraf">360° Virtual Tour</p>
+                                    <p class="virtual-tour__paragraf virtual-tour__paragraf--second">Google Street
+                                        Panorama View</p>
                                 </div>
                             </a>
                         </div>
@@ -75,9 +76,10 @@
                             <a href="">
                                 <img class="virtual-tour__image" src="assets/img/rectangle-1.jpg" alt="">
                                 <div class="virtual-tour__title">denon wing</div>
-                                <div class="virtual-tour__desctiprion virtual-tour__paragrafs">
-                                    <p>360° Virtual Tour</p>
-                                    <p class="virtual-tour__paragraf--second">Google Street Panorama View</p>
+                                <div class="virtual-tour__desctiprion">
+                                    <p class="virtual-tour__paragraf">360° Virtual Tour</p>
+                                    <p class="virtual-tour__paragraf virtual-tour__paragraf--second">Google Street
+                                        Panorama View</p>
                                 </div>
                             </a>
                         </div>
@@ -85,9 +87,10 @@
                             <a href="">
                                 <img class="virtual-tour__image" src="assets/img/rectangle-2.jpg" alt="">
                                 <div class="virtual-tour__title">colonnade perrault</div>
-                                <div class="virtual-tour__desctiprion virtual-tour__paragrafs">
-                                    <p>360° Virtual Tour</p>
-                                    <p class="virtual-tour__paragraf--second">Google Street Panorama View</p>
+                                <div class="virtual-tour__desctiprion">
+                                    <p class="virtual-tour__paragraf">360° Virtual Tour</p>
+                                    <p class="virtual-tour__paragraf virtual-tour__paragraf--second">Google Street
+                                        Panorama View</p>
                                 </div>
                             </a>
                         </div>
@@ -96,8 +99,9 @@
                                 <img class="virtual-tour__image" src="assets/img/rectangle-3.jpg" alt="">
                                 <div class="virtual-tour__title">Greek hall</div>
                                 <div class="virtual-tour__desctiprion virtual-tour__paragrafs">
-                                    <p>360° Virtual Tour</p>
-                                    <p class="virtual-tour__paragraf--second">Google Street Panorama View</p>
+                                    <p class="virtual-tour__paragraf">360° Virtual Tour</p>
+                                    <p class="virtual-tour__paragraf virtual-tour__paragraf--second">Google Street
+                                        Panorama View</p>
                                 </div>
                             </a>
                         </div>
@@ -106,8 +110,9 @@
                                 <img class="virtual-tour__image" src="assets/img/rectangle-4.jpg" alt="">
                                 <div class="virtual-tour__title">Mona Lisa</div>
                                 <div class="virtual-tour__desctiprion virtual-tour__paragrafs">
-                                    <p ">360° Virtual Tour</p>
-                                        <p class=" virtual-tour__paragraf--second">Google Street Panorama View</p>
+                                    <p class="virtual-tour__paragraf">360° Virtual Tour</p>
+                                    <p class="virtual-tour__paragraf virtual-tour__paragraf--second">Google Street
+                                        Panorama View</p>
                                 </div>
                             </a>
                         </div>
@@ -115,9 +120,10 @@
                             <a href="">
                                 <img class="virtual-tour__image" src="assets/img/rectangle-5.jpg" alt="">
                                 <div class="virtual-tour__title">Night Palace</div>
-                                <div class="virtual-tour__desctiprion virtual-tour__paragrafs">
-                                    <p>360° Virtual Tour</p>
-                                    <p class="virtual-tour__paragraf--second">Google Street Panorama View</p>
+                                <div class="virtual-tour__desctiprion">
+                                    <p class="virtual-tour__paragraf">360° Virtual Tour</p>
+                                    <p class="virtual-tour__paragraf virtual-tour__paragraf--second">Google Street
+                                        Panorama View</p>
                                 </div>
                             </a>
                         </div>
@@ -131,8 +137,8 @@
                 <div class="picture-explore">
                     <nav class="picture-explore__list">
                         <div class="picture-exlore__item">
-                            <h2 class="section-title explore-section__title">Picture explore<h2>
-                            <div class="picture-explore__paragrafs">
+                            <h2 class="section__title explore-section__title">Picture explore</h2>
+                            <div class="picture-explore__description">
                                 <p class="picture-explore__paragraf">Las Meninas is a
                                     1656
                                     painting by Diego
@@ -163,7 +169,7 @@
                 <div class="journey-video">
                     <img src="assets/img/frame.png" alt="" class="journey-video__picture">
                     <div class="journey-video__list">
-                        <div class="section-title journey-video__title"> Video journey</div>
+                        <div class="section__title journey-video__title"> Video journey</div>
                         <div class="journey-video__description">Enter and visit one of the most famous museums in the
                             world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code
                         </div>
@@ -174,7 +180,7 @@
         <!--  TICKETS  STYLES START ****************** -->
         <section class="section tickets-section  ">
             <div class="container">
-                <h2 class="section-title  tickets-section__title">Buy tickets</h2>
+                <h2 class="section__title  tickets-section__title">Buy tickets</h2>
                 <div class="by-tickets">
                     <div class="by-tickets__list">
                         <div class="by-tickets__picture">
@@ -202,21 +208,15 @@
                             <h4 class="by-tickets__title">Amount</h4>
                             <div class="by-tickets__description">Basic 18+</div>
                             <div class="by-tickets__button">
-                                <button type="button" class="button_minus"
-                                    onclick="this.nextElementSibling.stepDown()">-<span
-                                        class="by-tickets__two-minus">-</span></button>
-                                <input type="number" min="0" max="20" value="1" readonly class="number">
-                                <button type="button" class="button_plus"
-                                    onclick="this.previousElementSibling.stepUp()">+</button>
+                                <button class="by-tickets__minus" type="button"></button>
+                                <input class="number" type="number" min="0" max="20" value="1" readonly>
+                                <button class="by-tickets__plus" type="button"></button>
                             </div>
                             <div class="by-tickets__description--second by-tickets__description ">Senior 65+</div>
                             <div class="by-tickets__button">
-                                <button type="button" class="button_minus"
-                                    onclick="this.nextElementSibling.stepDown()">-<span
-                                        class="by-tickets__two-minus">-</span></button>
+                                <button type="button" class="by-tickets__minus"></button>
                                 <input type="number" min="0" max="20" value="1" readonly class="number">
-                                <button type="button" class="button_plus"
-                                    onclick="this.previousElementSibling.stepUp()">+</button>
+                                <button type="button" class="by-tickets__plus"></button>
                             </div>
                             <div class="by-tickets__description-price">Total &#8364<span>220</span>
                             </div>
@@ -230,7 +230,7 @@
         <!--  CONTACTS  STYLES START******************************************* -->
         <section class="section contacts-section ">
             <div class="container">
-                <h2 class="section-title  section-title--gold">Contacts</h2>
+                <h2 class="section__title  section__title--gold">Contacts</h2>
                 <div class="by-contacts">
                     <div class="by-contacts__list">
                         <div class="by-contacts__adress">
